--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -1,6 +1,27 @@
 {% extends "base.html" %}
 {% block start %}
 
-  
+<div class="container mt-5">
+    
+    <form class = "col-6 mx-auto card p-3 shadow-lg" method="post" enctype="multipart/form-data">
+        {%csrf_token%}
+        <h2>Add Receipe</h2>
+        <hr>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Receipe Name</label>
+          <input type="text" name="receipe_name" required class="form-control" >
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1"  class="form-label">Recipe Description</label>
+          <textarea class="form-control" name="receipe_decription" required></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Recipe Image</label>
+            <input name="receipe_image" type="file" class="form-control" >
+          </div>
+        <button type="submit" class="btn btn-success">Add Receipe</button>
+      </form>
+
+</div>  
     
 {% endblock %}
