--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -42,6 +42,7 @@
           </td>
           <td>
             <a href= "/delete-receipe/{{rec.id}}/" class="btn btn-danger">Delete<a>
+              <a href= "/update-receipe/{{rec.id}}/" class="btn btn-success m-2">Update<a></a>
           </td>
         </tr>
         {% endfor %}
