--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -21,7 +21,20 @@
           </div>
         <button type="submit" class="btn btn-success">Add Receipe</button>
       </form>
-    <table class="table">
+      <hr>
+      <div class="mt-5">
+        <div class="mx-auto col-6">
+          <form >
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Search Food</label>
+            <input type="text" name="search" class="form-control" >
+            
+          </div>
+          <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+        </div>
+      </div>
+    <table class="table mt-5">
       <thead>
         <tr>
           <th scope="col">#</th>
